--- a/monitoring/prometheus/prometheus.yaml
+++ b/monitoring/prometheus/prometheus.yaml
@@ -6,8 +6,8 @@ scrape_configs:
   - job_name: 'spring-boot'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['192.168.0.106:8080']
+      - targets: ['localhost:8080']
   - job_name: 'jmx'
     metrics_path: '/metrics'
     static_configs:
-      - targets: [ '192.168.0.106:5555' ]
+      - targets: [ 'localhost:5555' ]
