--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8080
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
 spring.application.name=virtual-threads-demo
+spring.threads.virtual.enabled=false
